--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
   <body>
     <header>
       <div class="header-top">
-        <h1 class="header-logo">
-          <p>about me</p>
-        </h1>
+        <a href="#index.html>
+          <h1 class="header-logo">
+            <p>about me</p>
+          </h1>
+        </a>
         <ul class="header-button">
           <li><a href="#profile">profile</a></li>
           <li><a href="#history">history</a></li>
@@ -134,3 +136,4 @@
     </footer>
   </body>
 </html>
+
