--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
   <body>
     <header>
       <div class="header-top">
-        <a href="#index.html>
-          <h1 class="header-logo">
-            <p>about me</p>
-          </h1>
-        </a>
+        <button>
+          <a href="#index.html>
+            <h1 class="header-logo">
+              <p>about me</p>
+            </h1>
+          </a>
+        </button>
         <ul class="header-button">
           <li><a href="#profile">profile</a></li>
           <li><a href="#history">history</a></li>
@@ -136,4 +138,5 @@
     </footer>
   </body>
 </html>
+
 
