--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
       <div class="header-top">
         <h1 class="header-logo">
-          <p>about me</p>
+          <a href="#">about me</a>
         </h1>
         <ul class="header-button">
           <li><a href="#profile">profile</a></li>
@@ -134,6 +134,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
